Changes for 1.5.1
* Fixed bug where steps appear out of order in a client game's history panel. (frigoref)

* Created new Trigger Attachment option, changeOwnership, which will allow a map to have the owner of a territory change by trigger. (veqryn)

* For Trigger Attachment option "removeUnits", now allowing the use of "all" in place of the territory name, and also "all" in place of the unit type. Can be used to remove all units from some or all territories. (veqryn)

* Correcting politics for Alpha xml. (veqryn)

* Changing game property, Selectable Tech Roll, to also work with WW2V3 Tech Model, allowing the user to select which tech they want after a successful roll. Also fixed the dice chooser to let you set the sides. (veqryn)

* Fixing bugs in new air movement validation, and improving speed and efficiency. (veqryn)

* Completely rewrote the validation of air unit movement, and moved it to a new class, AirMovementValidator.java (veqryn)

* More work on rewriting MoveValidation of air units. (veqryn)

* Allowed for the use of the Arrow Keys for navigating around the map. (frigoref)

* Adding [Mod] tags onto the names of any Admins in the online lobby. (veqryn)

* Possibly correcting some hidden bugs in MoveValidator. (veqryn)

* Created new CanalAttachment option, excludedUnits, which allows the specifying of specific units which will not be validated for. (veqryn)

* Created new RelationshipTypeAttachment option, canMoveThroughCanals, which allows a player to move through a canal owned by the other player. (veqryn)

* Removed restrictions that had canals only checked for Sea Movement. They now check for all movement, and therefore there can now be 'land' canals that require sea zones, or land requiring other land, or sea requiring sea, etc. (veqryn)

* Creating a better error message for when users do not have a map, but try to join the game anyway. (frigoref)
