@@ -1,4 +1,6 @@
 Changes for 1.5.1
+* Creating a NullModeratorController class for locally hosted games. (veqryn)
+
 * Fixed bug where steps appear out of order in a client game's history panel. (frigoref)
 
 * Created new Trigger Attachment option, changeOwnership, which will allow a map to have the owner of a territory change by trigger. (veqryn)
